fixes in alignment

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -120,11 +120,17 @@ section
 
 .notes
   padding: 10px
-  margin: 15px
-  width: 300px
-  height: 250px
+  margin: 10px
+  width: 25%
+  height: 30%
   display: inline-block
   font-size: 12px
+
+.alert-message
+  div.page-header
+    line-height: 13px
+    margin-bottom: 5px
+    margin-top: 0px
 
 .alert-message.block-message.shadow
   box-shadow: 5px 5px 5px black
@@ -141,7 +147,7 @@ section
   -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5)
 
 .store
-  padding: 70px 0 70px
+  padding: 50px 0 40px
 
 .mod
   margin-right: 5px
@@ -172,3 +178,7 @@ section
   float: right
   width: 220px
 
+.red-help
+  color: #ff0000
+  float: right
+  size: 15px
