--- a/app/assets/stylesheets/notes.css.sass
+++ b/app/assets/stylesheets/notes.css.sass
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $yellow: #ffc40d
 $black: #000
+$silver: #C0C0C0
 #note_body
-  width: 700px
+  width: 898px
   overflow-x: hidden
 
 .inline
@@ -64,7 +65,7 @@ $black: #000
 
 .overflow
   width: 200px
-  height: 250px
+  height: 200px
   overflow: hidden
   word-wrap: break-word
 
@@ -85,3 +86,6 @@ hr
   position: absolute
   width: 100%
   z-index: 2
+
+.center
+  padding-right: 50%
